# CLT-Research

./: .gitignore  coactivation.py  dataloading.py  download_data.py  download_models.py  feature_activations.py  gather_activations.py  label_evaluation.py  launch_pipeline.py  local_load.py  main.py  network_summary.py  pyproject.toml  test_new_model.py  virtual_weights.py
activations/: coactivation.py  feature_activations.py
configs/: config_data.py  config_template.yaml
data/: dataloading.py
feature_filtering/: feature_filtering.txt  filter_positional_features.py  sample_features.py
figures/: feature_activation_distribution.py  neighbor_counts.py
network/: compute_network_stats.py  global_weights.py  neighbors.py  virtual_weights.py
sample/: filter_positional_features.py  sample_features.py
sample/template_network/: sample_params_lock.json
sample/template_network/filter_history/: feature_filtering_info.txt
