[project]
name = "clt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "einops>=0.8.2",
    "httpx>=0.28.1",
    "huggingface-hub<1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "safetensors>=0.7.0",
    "tabulate>=0.10.0",
    "torch>=2.10.0",
    "transformers<5.0",
]
