[project]
name = "clt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "circuit-tracer",
    "datasets>=4.7.0",
    "huggingface-hub[cli]>=0.36.2",
    "ipykernel<7.0",
    "ipython>=9.11.0",
    "numpy>=1.26.4",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "safetensors>=0.7.0",
    "scipy>=1.17.1",
    "submitit>=1.5.4",
    "tabulate>=0.10.0",
    "torch>=2.10.0",
    "transformers>=4.57.3",
]

[tool.uv.sources]
circuit-tracer = { git = "https://github.com/decoderesearch/circuit-tracer.git" }

[tool.uv]
environments = ["sys_platform == 'linux'"]
